--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="title_activity_lab1">Lab1</string>
     <string name="home_lbl"><pre>Дьяченко Тетяна\nГрупа ІВ-81\nЗК ІВ-8113</pre></string>
     <string name="tab_text_1">Home</string>
-    <string name="tab_text_2">Tab 2</string>
+    <string name="tab_text_2">Graphs</string>
 </resources>
